feat(core-bundle): track reference sync timestamp for translations
Replace hasUntranslatedChange boolean with referenceSyncedAt timestamp.
Detect reference changes by comparing reference updatedAt against last
sync time. Show alert in sidebar when reference translation changed.

--- a/src/Xutim/Bundle/CoreBundle/templates/admin/article/article_edit.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/article/article_edit.html.twig
@@ -80,7 +80,7 @@
             <div class="tab-content">
                 <div id="general-tab" class="tab-pane active" role="tabpanel">
                     {{
-                        include('@XutimCore/admin/article/_article_sidebar.html.twig')
+                        include('@XutimCore/admin/article/_article_sidebar.html.twig', {referenceHasChanged: referenceHasChanged})
                     }}
                 </div>
             </div>
