--- a/src/Xutim/Bundle/CoreBundle/templates/admin/page/page_edit.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/page/page_edit.html.twig
@@ -84,7 +84,7 @@
             <div class="tab-content">
                 <div id="general-tab" class="tab-pane active" role="tabpanel">
                     {{
-                        include('@XutimCore/admin/page/_page_sidebar.html.twig', {translation: translation})
+                        include('@XutimCore/admin/page/_page_sidebar.html.twig', {translation: translation, referenceHasChanged: referenceHasChanged})
                     }}
                 </div>
             </div>
