--- a/src/Xutim/Bundle/CoreBundle/templates/admin/revision/translation_revisions.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/revision/translation_revisions.html.twig
@@ -84,24 +84,14 @@
                     type="button"
                     class="btn btn-sm btn-outline-primary"
                     data-action="revision-filter#toggle"
-                    data-revision-filter-target="toggleBtn"
                 >
-                    <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        class="icon icon-tabler icon-tabler-filter"
-                        width="20"
-                        height="20"
-                        viewBox="0 0 24 24"
-                        stroke-width="2"
-                        stroke="currentColor"
-                        fill="none"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                    >
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                        <path d="M4 4h16v2.172a2 2 0 0 1 -.586 1.414l-4.414 4.414v7l-6 2v-8.5l-4.48 -4.928a2 2 0 0 1 -.52 -1.345v-2.227z" />
-                    </svg>
-                    {{ 'Only Changed'|trans({}, 'admin') }}
+                    <twig:ux:icon name="tabler:filter" class="icon" />
+                    <span data-revision-filter-target="showAllText">
+                        {{ 'Show All'|trans({}, 'admin') }}
+                    </span>
+                    <span data-revision-filter-target="onlyChangedText" class="d-none">
+                        {{ 'Only Changed'|trans({}, 'admin') }}
+                    </span>
                 </button>
             </div>
 
